@@ -20,6 +20,7 @@ PsychoPy 2020.2.5
 
 FIXES:
 
+- Now code-signing the installer on Windows as well as macOS
 - Failing to send print statements to output, depending on how PsychoPy was launched #4773ec32dcf Only occured if you launch by double-clicking file or if you close Runner
 - Coder crashing on macOS when using editor with autocomplete=True #687e81dfb
 - ioHub fix for unicode strings #5451ea49a
@@ -36,11 +37,12 @@ FIXES:
 - errors that should have appeared in the console were sometimes appearing in the (app) error dialog #d44f24d63
 - more tolerant of whitespace in Emotiv Client ID file
 - Runner AddTask dialog had wrong format for file filter #3213
-- Fix to setting volume attribute with PTB backend #3215
+- Sound volume attribute was having no effect on the PTB backend #3215
 - Fixed fill/line colors of TextBox #3222
 - Error in JavaScript code when Movie Component had blank stop time #0b4ddcffc
 - Better handling of stdout encodings when console not set to utf-8 encoding #d77535906
 - Improved Resources box for the online (using relative references #c9558bfd8 and resize with dialog #d607271db)
+- JavaScript code-conversion now uses our own built-in `round()` function mimicking the same function in Python #da426d9e37e
 
 PsychoPy 2020.2.4
 -----------------
